Metrics controller (#131)
* add metrics json endpoint

* metrics json endpoint. wip metrics html endpoint

* wip: metrics

* wip: metrics

* metrics html implemented

* metrics html implemented

* add links to metrics from company and org

* align left metrics text

* lint

* bump version

---------

Co-authored-by: eric.r.driggs <eric.r.driggs@disneystreaming.com>